<resources>
    <!-- strings related to activity names -->
    <string name="app_name">text player</string>
    <string name="title_activity_settings">settings</string>
    <string name="playlist">playlist</string>
    <string name="stream">stream</string>
    <string name="equalizer">equalizer</string>
    <string name="settings">settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Main screen strings -->
    <string name="play_button">play</string>
    <string name="forward_button">forward</string>
    <string name="rewind_button">rewind</string>
    <string name="playlist_button">playlist</string>
    <string name="settings_button">settings</string>
    <string name="stream_button">stream</string>
    <string name="equalize_button">equalizer</string>
    <string name="motto">just pure sound</string>

    <!-- turn back button -->
    <string name="turn_back">back to main screen</string>

    <!-- activity descriptions -->
    <string name="stream_source">Source: WFFR 100.9 FM Roosevelt Park, MI</string>
    <string name="description_song_title">Song title</string>
    <string name="description_artist_name">Artist name</string>
    <string name="description_my_settings">This is activity where user will be able to customize setting to their own preferences</string>
    <string name="description_playlist">In this activity, user will be able to preview the playlist, as well as choose another song from the list</string>
    <string name="description_equalizer">In this activity, user will be able to adjust sound to match their own preferences. This feature will be implemented with Equalizer class</string>
    <string name="description_stream">In this activity, user will be able to launch an audio stream. For demonstration purposes of streaming playback capabilities, link to the audio stream was hard-coded. </string>

</resources>
