<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.textplayer.mySettingsActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/dark_bg" />

    <Button
        android:id="@+id/reverse"
        style="@style/back_to_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_back" />

    <TextView
        android:id="@+id/activity_description"
        style="@style/activity_description_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_my_settings" />

    <Button
        android:id="@+id/eq_lower_left_button"
        style="@style/lower_left_button"
        android:text="@string/playlist_button" />

    <Button
        android:id="@+id/eq_lower_right_button"
        style="@style/lower_right_button"
        android:text="@string/stream_button" />
</RelativeLayout>
