<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.textplayer.stream">


    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/dark_bg" />

    <Button
        android:id="@+id/reverse"
        style="@style/back_to_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_back" />

    <TextView
        android:id="@+id/activity_description"
        style="@style/activity_description_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_stream" />

    <Button
        android:id="@+id/st_lower_left_button"
        style="@style/lower_left_button"
        android:text="@string/playlist_button" />

    <Button
        android:id="@+id/st_lower_right_button"
        style="@style/lower_right_button"
        android:text="@string/equalize_button" />

    <TextView
        android:id="@+id/broadcast_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_description"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/stream_source"
        android:textColor="@color/secondary_text" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/broadcast_description"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
        android:indeterminateOnly="false"
        android:maxHeight="20dip"
        android:minHeight="20dip"></ProgressBar>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar1"
        android:layout_marginTop="20dip"
        android:gravity="center">

        <Button
            android:id="@+id/buttonPlay"
            style="@style/buttonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play"></Button>

        <Button
            android:id="@+id/buttonStopPlay"
            style="@style/buttonStopPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stop"></Button>
    </LinearLayout>

</RelativeLayout>
