<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.textplayer.playlist">

    <RelativeLayout
        android:id="@+id/upperLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/dark_bg" />

        <Button
            android:id="@+id/reverse"
            style="@style/back_to_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_back" />

        <TextView
            android:id="@+id/activity_description"
            style="@style/activity_description_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_playlist" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/activity_description">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <View
                    style="@style/view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"></View>

                <TextView
                    android:id="@+id/song_title1"
                    style="@style/song_title_playlist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_song_title" />

                <TextView
                    android:id="@+id/song_artist1"
                    style="@style/song_artist_playlist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_artist_name" />

                <View
                    style="@style/view_style"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"></View>


                <TextView
                    android:id="@+id/song_title2"
                    style="@style/song_title_playlist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_song_title" />

                <TextView
                    android:id="@+id/song_artist2"
                    style="@style/song_artist_playlist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_artist_name" />

                <View
                    style="@style/view_style"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"></View>

                <TextView
                    android:id="@+id/song_title3"
                    style="@style/song_title_playlist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_song_title" />

                <TextView
                    android:id="@+id/song_artist3"
                    style="@style/song_artist_playlist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_artist_name" />

                <View
                    style="@style/view_style"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"></View>

                <TextView
                    android:id="@+id/song_title4"
                    style="@style/song_title_playlist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_song_title" />

                <TextView
                    android:id="@+id/song_artist4"
                    style="@style/song_artist_playlist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_artist_name" />

                <View
                    style="@style/view_style"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"></View>

                <TextView
                    android:id="@+id/song_title5"
                    style="@style/song_title_playlist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_song_title" />

                <TextView
                    android:id="@+id/song_artist5"
                    style="@style/song_artist_playlist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_artist_name" />

                <View
                    style="@style/view_style"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"></View>

                <TextView
                    android:id="@+id/song_title"
                    style="@style/song_title_playlist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_song_title" />

                <TextView
                    android:id="@+id/song_artist"
                    style="@style/song_artist_playlist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_artist_name" />

                <View
                    style="@style/view_style"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"></View>
            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/pl_lower_left_button"
            style="@style/lower_left_button"
            android:text="@string/equalize_button" />

        <Button
            android:id="@+id/pl_lower_right_button"
            style="@style/lower_right_button"
            android:text="@string/stream_button" />
    </RelativeLayout>


</LinearLayout>
